Dodanie klasy GameC
Dodanie klasy GameC, jako głównej klasy gry. Zawiera w sobie elementy
silnika fizycznego i będzie zawierać całą logikę itp.

--- a/gtt/gtt/gtt/gtt.csproj
+++ b/gtt/gtt/gtt/gtt.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ConvertUnits.cs" />
     <Compile Include="DebugView.cs" />
     <Compile Include="DebugViewXNA.cs" />
+    <Compile Include="MainC\GameC.cs" />
     <Compile Include="Pages\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
