--- a/gtt/gtt/gtt/gtt.csproj
+++ b/gtt/gtt/gtt/gtt.csproj
@@ -72,7 +72,10 @@
     <Compile Include="ConvertUnits.cs" />
     <Compile Include="DebugView.cs" />
     <Compile Include="DebugViewXNA.cs" />
+    <Compile Include="MainC\Block.cs" />
+    <Compile Include="MainC\BlockTypesEnum.cs" />
     <Compile Include="MainC\GameC.cs" />
+    <Compile Include="MainC\Sprite.cs" />
     <Compile Include="Pages\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
