Update Blocks & Pages
Dodane aktualizacje w klasie Blocks, dodane rozróznienie typów klocków,
różne ciała fizyczne składające się z kilku podciał. Dodana strona
Highscores

--- a/gtt/gtt/gtt/gtt.csproj
+++ b/gtt/gtt/gtt/gtt.csproj
@@ -48,8 +48,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FarseerPhysicsXNA">
-      <HintPath>..\..\..\..\..\FPE\Farseer Physics Engine 3.3.1 XNA\bin\Windows Phone\Debug\FarseerPhysicsXNA.dll</HintPath>
+    <Reference Include="Farseer Physics 3.0 WinPhone">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Physics Helper\Physics Helper Library\WP7.1\Farseer Physics 3.0 WinPhone.DLL</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Interop" />
@@ -88,6 +88,9 @@
     <Compile Include="Pages\Help.xaml.cs">
       <DependentUpon>Help.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\HighScores.xaml.cs">
+      <DependentUpon>HighScores.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Options.xaml.cs">
       <DependentUpon>Options.xaml</DependentUpon>
     </Compile>
@@ -113,6 +116,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\Help.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\HighScores.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
