Dodana Klasa LevelLine, refactor Kodu.
Refactor Kodu GameC i klasy Block, dodane Slidery w stronie Options.
Dodana struktura GameSettings,

--- a/gtt/gtt/gtt/gtt.csproj
+++ b/gtt/gtt/gtt/gtt.csproj
@@ -75,6 +75,7 @@
     <Compile Include="MainC\Block.cs" />
     <Compile Include="MainC\BlockTypesEnum.cs" />
     <Compile Include="MainC\GameC.cs" />
+    <Compile Include="MainC\LevelLine.cs" />
     <Compile Include="MainC\Sprite.cs" />
     <Compile Include="Pages\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
