--- a/gtt/gtt/gtt/gtt.csproj
+++ b/gtt/gtt/gtt/gtt.csproj
@@ -75,7 +75,9 @@
     <Compile Include="MainC\Block.cs" />
     <Compile Include="MainC\BlockTypesEnum.cs" />
     <Compile Include="MainC\GameC.cs" />
+    <Compile Include="MainC\IPlayer.cs" />
     <Compile Include="MainC\LevelLine.cs" />
+    <Compile Include="MainC\Player.cs" />
     <Compile Include="MainC\Sprite.cs" />
     <Compile Include="Pages\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
